<resources>
    <string name="facebook_app_id">890660845841511</string>
    <string name="client_token">e8354117461c1f7ae5902f859f61193e</string>
    <string name="default_web_client_id">AIzaSyAOH2Vq3kOpe3seWGeiDx4-UIKePgVAZ00.apps.googleusercontent.com</string>
    <string name="map_name">hiveroomi</string>
    <string name="place_index_name">hiveroomi</string>
    <string name="post_detail">Post Detail</string>
    <string name="plz_wait">Plz wait</string>
    <string name="click_me">Click Me</string>
    <string name="app_name">HiveRoomi</string>
    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="please_try_again">Please try again</string>
    <string name="error_found">Error Found</string>
    <string name="splash_desc">By tapping on “Create Account” or “Login”, you agree to our Terms. For more information on how we process your data, you can consult our Privacy Policy and our Cookie Policy</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_in_with_google">Login in with Google</string>
    <string name="login_in_with_facebook">Login in with FaceBook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_the_language">Select the Language</string>
    <string name="choose_your_preferred_language_to_continue">Choose your preferred language to continue</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="what_are_you_looking_for">What are you looking for</string>
    <string name="looking_for_a_roommate">Looking for a Roommate</string>
    <string name="looking_for_a_home">Looking for a Home</string>
    <string name="room_home_offering">Room/Home Offering</string>
    <string name="continues">Continue</string>
    <string name="login">Login</string>
    <string name="log_in_to_find_your_perfect_match">Log in to find your perfect match.</string>
    <string name="email_or_phone_number">Email or Phone number</string>
    <string name="enter_your_email">Enter email or phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="it_only_takes_a_minute_to_get_started">It only takes a minute to get started.</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_inw">Log in</string>
    <string name="enter_your_name">Enter name</string>
    <string name="enter_confirm_password">Enter confirm Password</string>
    <string name="enter_your_password">Enter password</string>
    <string name="verify_its_you">Verify its you</string>
    <string name="please_enter_the_otp_below_that_we_have_sent_to_your_email">Please enter the OTP below that we have sent to your email.</string>
    <string name="resend_otp_in">Resend OTP in</string>
    <string name="_26">26s</string>
    <string name="verify">Verify</string>
    <string name="personal_information">Personal Information</string>
    <string name="tell_us_some_basic_information_about_you">Tell us some basic information about you</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="age">Age</string>
    <string name="_18_22">18-22</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="profession_role">Profession / Role</string>
    <string name="short_bio">Short Bio</string>
    <string name="tell_us_a_bit_about_yourself">Tell us a bit about yourself…</string>
    <string name="linkedin_link">LinkedIn Link</string>
    <string name="instagram_link">Instagram Link</string>
    <string name="add_link">Add link</string>
    <string name="your_account_has_been_successfully_created">Your account has been successfully created</string>
    <string name="account_created_nsuccessfully">Account Created\nSuccessfully</string>
    <string name="change_password">Change Password</string>
    <string name="set_up_password">Setup your new\npassword</string>
    <string name="enter_your_email_or_phone_number_here">Enter your email or Phone number here</string>
    <string name="verify_it_s_you">Verify it’s you</string>
    <string name="we_have_sent_you_4_digit_verification_code_to_you_email_address">We have sent you 4-digit verification code to you email address.</string>
    <string name="enter_4_digit_code">Enter 4-digit code</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quiz_desc">Find better roommate matches by answering a few quick questions about your lifestyle.</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="matches">Matches</string>
    <string name="messages">Messages</string>
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="location">Location</string>
    <string name="bio">Bio</string>
    <string name="preferences">Preferences</string>
    <string name="room_type">Room Type</string>
    <string name="smoking">Smoking</string>
    <string name="pets">Pets</string>
    <string name="preferred_housemates">Preferred Housemates</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="preferred_area">Preferred Area</string>
    <string name="budget">Budget</string>
    <string name="move_in_date">Move-in Date</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="elevator">Elevator</string>
    <string name="furnished">Furnished</string>
    <string name="heating">Heating</string>
    <string name="linked_accounts">Linked Accounts</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="share_hive_roomi">Share Hive Roomi</string>
    <string name="done">Done</string>
    <string name="contact_us">Contact Us</string>
    <string name="community">Community</string>
    <string name="privacy">Privacy</string>
    <string name="legal_notes">Legal Notes</string>
    <string name="account">Account</string>
    <string name="help_and_assistance">Help and assistance</string>
    <string name="community_guidelines">Community Guidelines</string>
    <string name="safety_tips">Safety Tips</string>
    <string name="cookie_policy">Cookie Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="your_privacy_matters">Your Privacy\nMatters</string>
    <string name="privacy_preferences">Privacy Preferences</string>
    <string name="licenses">Licenses</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="logout">Log out</string>
    <string name="delete_account">Delete Account</string>
    <string name="setup_your_new_npassword">Setup your new \npassword</string>
    <string name="create_your_password_of_12_characters">Create your password of 12 characters</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="overnight_guests">Overnight Guests</string>
    <string name="sleep_schedule">Sleep Schedule</string>
    <string name="preferred_location_area">Preferred Location/Area</string>
    <string name="enter_location">Enter location</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="enter_budget">Enter Budget</string>
    <string name="edit">Edit</string>
    <string name="lifestyle_compatibility_quiz">Essential Filters</string>
    <string name="this_helps_us_match_you_with_the_most_compatible_people">We\'ll find the right homes for you right away</string>
    <string name="what_time_do_you_usually_go_to_bed">What time do you usually go to bed?</string>
    <string name="set_your_budget_and_roommate_preferences">Set your budget and roommate preferences</string>
    <string name="preferences_amp_budget"><![CDATA[Preferences & Budget]]></string>
    <string name="roommate_gender_preference">Roommate Gender Preference</string>
    <string name="men_only">Men only</string>
    <string name="view_matches">View Matches</string>
    <string name="quiz_completed">Quiz Completed!</string>
    <string name="you_re_all_set_we_ll_use_your_answers_to_match_you_with_the_most_compatible_roommates_and_rooms">You\'re all set. We’ll use your answers to match you with the most compatible roommates and rooms.</string>
    <string name="what_type_of_provider_nare_you">What type of provider\nare you?</string>
    <string name="please_select_below">Please select below</string>
    <string name="build_trust_with_your_nfuture_tenants">Build trust with your\nfuture tenants</string>
    <string name="more_trust_more_benifits">More trust more benifits</string>
    <string name="driver_s_license_passport_etc">(Driver’s license, Passport, etc.)</string>
    <string name="icaddimg">icAddImg</string>
    <string name="upload">Upload</string>
    <string name="id_upload">ID Upload</string>
    <string name="ownership_document">Ownership Document</string>
    <string name="for_landlords_optional">(for landlords — optional)</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="reload">Reload</string>
    <string name="welcome_to_hive_roomi">Welcome to Hive Roomi</string>
    <string name="here_are_simple_rules_to_keep_in_mind">Here are simple rules to keep in mind.</string>
    <string name="don_t_pretend_to_be_someone_you_re_not">Don’t pretend to be someone you’re not.</string>
    <string name="make_sure_your_photo_age_and_blog_reflect_who_you_really_are">Make sure your photo, age, and blog reflect who you really are</string>
    <string name="be_careful">Be careful.</string>
    <string name="don_t_be_too_quick_to_reveal_you_personal_information_enjoy_responsibly">Don’t be too quick to reveal you personal information. Enjoy responsibly.</string>
    <string name="behave_properly">Behave properly.</string>
    <string name="treat_everyone_you_meet_on_the_app_the_way_you_would_want_them_to_treat_you">Treat everyone you meet on the App the way you would want them to treat you.</string>
    <string name="don_t_pretend_nothing_is_happening">Don’t pretend nothing is happening.</string>
    <string name="always_report_inappropriate_behavior">Always report inappropriate behavior.</string>
    <string name="i_accept">I accept</string>
    <string name="room_details">Room Details</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="in_sq">in sq</string>
    <string name="furnished_status">Furnished Status</string>
    <string name="roommate">Roommate</string>
    <string name="want_more_visibility_nboost_your_listing">Want more visibility?\nBoost your listing!</string>
    <string name="boost_1_point">• Boost to appear in top results &amp; get more matches.</string>
    <string name="boost_2_point">• Estimated 3x more views in first 48 hours.</string>
    <string name="cancel">Cancel</string>
    <string name="boost">Boost</string>
    <string name="double_rooms">Double Room</string>
    <string name="fully_furnished">Fully Furnished</string>
    <string name="yes">Yes</string>
</resources>