<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.tech.hive.ui.room_offering.basic_details.BasicDetailsVM" />

        <variable
            name="sizeType"
            type="String" />



    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.room_offering.basic_details.RoomDetailsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clHeader"
            android:layout_width="0dp"
            android:layout_height="@dimen/_105sdp"
            android:background="@drawable/top_bg"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_18sdp"
                android:onClick="@{v->vm.onClick(v)}"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_back_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextView.PoppinsBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/room_details"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivBack" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRoom"
            style="@style/TextView.SfMedium"
            android:textSize="@dimen/_13ssp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/type"
            android:textColor="@color/black_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clHeader" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etRoom"
            style="@style/EditText"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/unselect_edit_text_bg_color"
            android:focusable="false"
            android:hint="@string/double_rooms"
            android:onClick="@{v->vm.onClick(v)}"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRoom" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivRoom"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/arrow_up"
            app:layout_constraintBottom_toBottomOf="@+id/etRoom"
            app:layout_constraintEnd_toEndOf="@+id/etRoom"
            app:layout_constraintTop_toTopOf="@+id/etRoom" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSize"
            style="@style/TextView.SfMedium"
            android:textSize="@dimen/_13ssp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/size"
            android:textColor="@color/black_24"
            app:layout_constraintStart_toStartOf="@+id/etRoom"
            app:layout_constraintTop_toBottomOf="@+id/etRoom" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSize"
            style="@style/EditText"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@{sizeType.isEmpty()?@drawable/unselect_edit_text_bg_color:@drawable/select_edittext_bg_color}"
            android:hint="@string/in_sq"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSize" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStatus"
            style="@style/TextView.SfMedium"
            android:textSize="@dimen/_13ssp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/furnished_status"
            android:textColor="@color/black_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSize" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStatus"
            style="@style/EditText"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/unselect_edit_text_bg_color"
            android:focusable="false"
            android:onClick="@{v->vm.onClick(v)}"
            android:hint="@string/fully_furnished"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatus" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivStatus"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/arrow_up"
            app:layout_constraintBottom_toBottomOf="@+id/etStatus"
            app:layout_constraintEnd_toEndOf="@+id/etStatus"
            app:layout_constraintTop_toTopOf="@+id/etStatus" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRoommate"
            style="@style/TextView.SfMedium"
            android:textSize="@dimen/_13ssp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/roommate"
            android:textColor="@color/black_24"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etStatus" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etRoommate"
            style="@style/EditText"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/unselect_edit_text_bg_color"
            android:focusable="false"
            android:hint="@string/yes"
            android:onClick="@{v->vm.onClick(v)}"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRoommate" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivRoommate"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/arrow_up"
            app:layout_constraintBottom_toBottomOf="@+id/etRoommate"
            app:layout_constraintEnd_toEndOf="@+id/etRoommate"
            app:layout_constraintTop_toTopOf="@+id/etRoommate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnContinue"
            style="@style/TextView.Medium"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btn_bg_color"
            android:onClick="@{v->vm.onClick(v)}"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>